--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -5,5 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exemplo Bootstrap 2019</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" src="styles.css">
 </head>
 <body>
